--- a/src/os2datascanner/projects/admin/adminapp/templates/components/navigation.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/navigation.html
@@ -29,6 +29,14 @@
           </span>
         </a>
       </li>
+      <li>
+        <a href="/organizations" class="{% if active_tab == 'organizations' %}active{% endif %}">
+        {# TODO: add icon #}
+          <span class="width">
+            {% trans 'organizations'|capfirst %}
+          </span>
+        </a>
+      </li>
       {% if user.is_superuser or user.is_staff %}
       <li>
         <a href="/admin/" target="_NEW">
