--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_add.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_add.html
@@ -5,9 +5,20 @@
 {% block title %}{% trans "add organization"|capfirst %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans 'add organization'|capfirst %}</h1>
-    <form method="post">{% csrf_token %}
-        <table>{{ form.as_table }}</table>
-    <input type="submit" value="{% trans "create new organization"|capfirst %}">
+    {% include "partials/breadcrumb.html" with page="organization"  %}
+
+    <div class="aside">
+        <h1>{% trans 'add organization'|capfirst %}</h1>
+    </div>
+
+    <form class="form" role="form" method="post">{% csrf_token %}
+        <section class="data-form">
+            {{ form.as_table }}
+        </section>
+        <div class="form__group last-btn">
+            <button type="submit" class="button button--cta" name="save" value="{% trans "create new organization"|capfirst %}">
+                {% trans "create new organization"|capfirst %}
+            </button>
+        </div>
     </form>
 {% endblock %}
