--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_list.html
@@ -5,32 +5,81 @@
 {% block title %}{% trans "organizations"|capfirst %}{% endblock %}
 
 {% block content %}
-    {%  regroup organization_list by client as client_list%}
+{%  regroup organization_list by client as client_list%}
 
-    {%  for client in client_list %}
-    <h1>{% trans 'organizations for'|capfirst %} {{ client.grouper }}</h1>
-    <table>
-      <tr>
-      <th>{% trans "name"|capfirst %}</th>
-      <th>{% trans "phone number"|capfirst %}</th>
-      <th>{% trans "email"|capfirst %}</th>
-      <th>{% trans "top organizational unit"|capfirst %}</th>
-      </tr>
-      {% for organization in client.list %}
-      <tr>
-      <!-- TODO: make org name link to detail page -->
-      <!-- TODO: consider if detail and edit should be the same? -->
-      <td>{{ organization.name }}</td>
-      <td>{{ organization.contact_phone }}</td>
-      <td>{{ organization.contact_email }}</td>
-      </tr>
-      {% endfor %}
-      </table>
+{%  for client in client_list %}
+    <div class="aside">
+        <h1 class="page-title">
+            {% trans 'organizations for'|capfirst %} {{ client.grouper }}
+        </h1>
+        <div class="btn">
+            <a 
+            class="button button--cta" 
+            href="{% url 'add-organization-for' client_id=client.grouper.pk %}"
+            title="{% trans 'Add new organization' %}">
+              <svg class="icon icon--white">
+                <use xlink:href="/static/src/svg/symbol-defs.svg#icon-plus"></use>
+              </svg>
+              <span>
+                {% trans "Add new organization" %}
+              </span>
+            </a>
+        </div>
+    </div>
 
-    <button>
-        <a href="{% url 'add-organization-for' client_id=client.grouper.pk%}">
-            {% trans "add organization"|capfirst %}
-        </a>
-    </button>
-    {% endfor %}
+    {% if client.list %}
+    <table class="datatable">
+        <thead>
+            <tr>
+                <th>{% trans "name"|capfirst %}</th>
+                <th>{% trans "email"|capfirst %}</th>
+                <th>{% trans "phone"|capfirst %}</th>
+                <th>{% trans "directory service"|capfirst %}</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for organization in client.list %}
+            <tr>
+                <!-- TODO: make org name link to detail page -->
+                <!-- TODO: consider if detail and edit should be the same? -->
+                <td><a href="#">{{ organization.name }}</a></td>
+                <td>{{ organization.contact_email }}</td>
+                <td>{{ organization.contact_phone }}</td>
+                <td>
+                    <div class="flex">
+                        <button 
+                            id="button-add-configuration" 
+                            type="button" 
+                            class="button button--transparent">
+                            <i id="add" title="Tilføj LDAP konfiguration" class="material-icons">add</i>
+                        </button>
+                        <button 
+                            id="button-add-configuration" 
+                            type="button" 
+                            class="button button--transparent">
+                            <i id="edit" title="Redigér LDAP konfiguration" class="material-icons">edit</i>
+                        </button>
+                        <button 
+                            id="button-add-configuration" 
+                            type="button" 
+                            title="{% trans 'sync'|capfirst %}"
+                            class="button button--transparent button--transparent--text">
+                            {% trans "sync"|capfirst %}
+                        </button>
+                        <span class="text">
+                            Sidst synkroniseret<br>
+                            d. 08/04/21 kl. 14:00
+                        </span>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+        <p>
+            {% trans "no organization added"|capfirst %}
+        </p>
+    {% endif %}
+{% endfor %}
 {% endblock %}
