--- a/src/os2datascanner/projects/admin/adminapp/static/src/css/components/_buttons.scss
+++ b/src/os2datascanner/projects/admin/adminapp/static/src/css/components/_buttons.scss
@@ -134,6 +134,102 @@
     margin-left: 0.5rem;
 }
 
+// submit button in form
 .last-btn {
   margin-bottom: 3rem;
+}
+
+
+// recurrence widget styling - must be changed!
+.add-rule, .add-date {
+  background-color: #e9e9e9;
+  color: var(--color-text-main) !important;
+  padding: .5rem;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  text-decoration: none;
+  transition: var(--transition-default);
+  border-radius: var(--border-radius-button);
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+}
+
+.recurrence-widget {
+  width: 100%;
+  color: var(--color-text-main);
+  border: none !important;
+
+  .remove {
+    margin-right: 1rem;
+    background-color: var(--color-error);
+    fill: #fff !important;
+    color: #fff !important;
+    z-index: 1;
+
+    &:hover {
+      background-color: var(--color-error-dark);
+    }
+  }
+
+  .panel {
+    margin-top: .5rem;
+  }
+
+  .control {
+    margin-top: 1rem;
+  }
+
+  .active {
+    font-weight: 600;
+  }
+
+  .body {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .header {
+    background-color: #e9e9e9 !important;
+  }
+
+  .recurrence-label {
+    text-decoration: none !important;
+  }
+
+  .limit, .date, .date-selector {
+    width: 100%;
+  }
+
+  .date-selector {
+    width: 100%;
+  }
+
+  .date-field {
+    width: 50%;
+  }
+
+  .radio {
+    margin-top: 1.5rem;
+    margin-bottom: .5rem;
+  }
+  
+}
+
+.recurrence-calendar {
+  border: 1px solid #ccc;
+
+  .grid {
+    width: 15rem;
+  }
+}
+.recurrence-calendar .remove {
+  z-index: 1;
+  padding: .25rem;
+  background-color: var(--color-error);
+  fill: #fff !important;
+  color: #fff !important;
 }
