--- a/src/os2datascanner/projects/report/reportapp/templates/socket_template/socketroom.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/socket_template/socketroom.html
@@ -15,7 +15,7 @@
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/'
+            + '/ws/chat/'
             + roomName
             + '/'
         );
