--- a/src/os2datascanner/projects/report/reportapp/templates/index.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 {%  load i18n %}
 {% include "partials/header.html" %}
 {% include "components/banner.html" %}
@@ -24,14 +25,15 @@
         {% else %}
           {% include "components/hits.html" %}
         {% endif %}
-        <div id="all_matches"></div>
+        {% include "components/documentreports.html" %}
+
       </div>
 
     </main>
 
     {% include "partials/scripts.html" %}
-    <script>
-
+    <!-- <script>
+        
         var formData = document.querySelector("#filter_form")
         
         var wsStart = window.location.protocol == 'https:' ? 'wss://' : 'ws://'
@@ -96,7 +98,24 @@
             console.log("close", e)
         };
 
+        $("#submit-button").click(function(event) {
+          event.preventDefault()
+          const messageInputDom = document.getElementById('message-select');
+          const message = messageInputDom.value;
+          socket.send(JSON.stringify({ //This is what we send into the socket
+                'message': message
+            }));
+          console.log(message);
+        })
+
+    </script> -->
+    {% block script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="{% static "src/js/documentReports.js" %}">
     </script>
+    {% endblock %}
 
 </body>
 </html>
