--- a/src/os2datascanner/projects/admin/adminapp/templates/components/navigation.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/navigation.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-<nav class="navigation">
+<nav class="navi">
   <ul>
   {% if user.is_authenticated %}
     {% if not user.profile.is_upload_only %}
