--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
@@ -83,6 +83,8 @@
 </script>
 <script type="text/javascript" src="{% static 'js/ruleselector.js' %}"></script>
 <script src="{% static 'js/options.js' %}"></script>
+<script src="{% static 'js/recurrence.js' %}"></script>
+<script src="{% static 'js/recurrence-widget.js' %}"></script>
 {% endblock %}
 
 {% block body %}
