--- a/src/os2datascanner/projects/report/reportapp/static/src/css/master.scss
+++ b/src/os2datascanner/projects/report/reportapp/static/src/css/master.scss
@@ -23,4 +23,7 @@
 @import 'components/hit-links';
 @import 'components/sensitivity-chart';
 @import 'components/handle-match';
-@import 'components/filters'
+@import 'components/filters';
+@import 'components/pagination';
+@import 'components/spinner';
+@import '../../3rdparty/bootstrap-4.3.1.min.css';
