[#41650] Commented out bar charts and minor fixes

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics-template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics-template.html
@@ -202,14 +202,14 @@
         <!-- Commented out until the method for 'Uhåndterede matches' is ready
         <div class="dropdown">
           <div class="select">
-            <span class="select_span">Nye matches pr. md.</span>
+            <span class="select_span">{% trans "New matches by month" %}</span>
             <i class="material-icons">
               keyboard_arrow_down
             </i>
           </div>
           <ul class="dropdown-menu">
-            <li>Nye matches pr. md.</li>
-            <li>Uhåndterede matches</li>
+            <li>{% trans "New matches by month" %}</li>
+            <li>{% trans "Unhandled matches by month" %}</li>
           </ul>
         </div>
         -->
