[#45111] Created API for org-units and now creates treeview based on chosen organisation

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
@@ -78,6 +78,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 <script src="{% static 'js/dropdowntree.js' %}"></script>
+<script src="{% static 'js/getOrgUnits.js' %}"></script>
 
 {% endblock %}
 
@@ -522,35 +523,7 @@
               for="{{ form.org_unit.name }}">
               {{ form.org_unit.label }}
             </label>
-            <select class="treeview" id="sel_1" multiple="multiple" name="{{ form.org_unit.name }}" size="10">
-              {% for node,structure in org_units|tree_info %}              
-              {% if node.is_child_node %}
-              <option value="{{ node.uuid }}"
-                      id = "treeview_option_{{node.uuid}}"
-                      data-descendents="{{node.children.all}}"
-                      data-pup="{{ node.parent.uuid }}"
-                      class="l-{{node.get_ancestors.count}}
-                      {% if node.get_descendant_count != 0 %} non-leaf {% endif %}" 
-                      {% if form.org_unit.value|add:"0" == node.uuid|add:"0" %}
-                        selected="selected"
-                      {% endif %}
-              >
-                {{ node }}
-                
-              </option>
-              {% else %}
-              <option value="{{ node.uuid }}"
-                      id = "treeview_option_{{node.uuid}}"
-                      data-descendents="{{node.children.all}}"
-                      class="l-0 {% if node.get_descendant_count != 0 %} non-leaf {% endif %}"
-                      {% if form.org_unit.value|add:"0" == node.uuid|add:"0" %}
-                        selected="selected"
-                      {% endif %}
-              >
-                {{ node }}
-              </option>
-              {% endif %}
-              {% endfor %}
+            <select class="treeview" id="sel_1" multiple="multiple" name="{{ form.org_unit.name }}" size="10" url="{% url 'org-units-listing' %}">
             </select>
           </div>
 
