--- a/src/os2datascanner/projects/admin/adminapp/static/src/css/components/dropdown-treeview.scss
+++ b/src/os2datascanner/projects/admin/adminapp/static/src/css/components/dropdown-treeview.scss
@@ -135,9 +135,6 @@
 	background-color: #5ca4cd40;
 	color: black;
 }
-.s2-to-tree.select2-container li.select2-results__option[aria-selected="true"] > span.item-label {
-	background-color: #5ca4cd40;
-}
 
 .s2-to-tree.select2-container li.select2-results__option--highlighted[aria-selected],
 .s2-to-tree.select2-container li.select2-results__option[aria-selected="true"] {
@@ -188,16 +185,26 @@
 	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1) !important;
 }
 
+.select2-container .select2-search--inline {
+	float: left;
+	margin: -1%;
+}
+.select2-results__option {
+	padding: 5px;
+	user-select: none;
+	-webkit-user-select: none;
+	margin: 0px;
+	}
+
 .select2-search__field {
-	box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.1) !important;
 	outline: none !important;
 	border: none !important;
 	padding: 0.5rem !important;
 }
 .select2-search__field:focus {
-	box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3) !important;
 	outline: none !important;
 	border: none !important;
+	padding: 0.5rem !important;
 }
 
 .s2-to-tree .org-icon {
@@ -227,16 +234,16 @@
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
 	.s2-to-tree li.select2-results__option.non-leaf.opened .expand-collapse:before {
-		content: "-" !important;
-		font-size: 1.5em !important;
-		top: -0.5em !important;
-		left: -0.15em !important;
+		content: "⮟" !important;
+		font-size: 1em !important;
+		top: 0em !important;
+		transform: rotate(90deg);
+		left: 0.25em !important;
   }
 
   .s2-to-tree li.select2-results__option.non-leaf .expand-collapse:before {
-		content: "+" !important;
-		font-size: 1.5em !important;
+		content: "⮞" !important;
+		font-size: 1em !important;
     top: -0.25em !important;
 	}
-
-}
+} 
