--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_form.html
@@ -77,9 +77,10 @@
 <!-- Tree view widget -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
-<script src="{% static 'js/dropdowntree.js' %}"></script>
-<script src="{% static 'js/getOrgUnits.js' %}"></script>
-
+{% if view.type == 'exchange' %}
+  <script src="{% static 'js/dropdowntree.js' %}"></script>
+  <script src="{% static 'js/getOrgUnits.js' %}"></script>
+{% endif %}
 {% endblock %}
 
 {% block body %}
